# airbnb-clone-backend

./: pyproject.toml
common/: models.py
config/: settings.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py
rooms/: models.py
rooms/migrations/: 0001_initial.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_currency.py
